fix: too small sortable handle for ACP>Manage>Categories
The handle was initially just the icon, but now it is the icon
and the category label itself.

--- a/public/less/admin/manage/categories.less
+++ b/public/less/admin/manage/categories.less
@@ -68,24 +68,25 @@ div.categories {
 		}
 	}
 
-	.icon {
-		width: 24px;
-		height: 24px;
-		border-radius: 50%;
-		line-height: 24px;
-		text-align: center;
-		vertical-align: bottom;
-		background-size: cover;
-		float: left;
-		margin-right: 0px;
-		cursor: move;
-		.fa {
-			font-size: 85%;
-		}
-	}
-
 	.information {
-		padding-left: 60px;
+		cursor: move;
+		padding-left: 3rem;
+
+		.icon {
+			width: 24px;
+			height: 24px;
+			border-radius: 50%;
+			line-height: 24px;
+			text-align: center;
+			vertical-align: bottom;
+			background-size: cover;
+			float: left;
+			margin-right: 1rem;
+
+			.fa {
+				font-size: 85%;
+			}
+		}
 	}
 
 	.category-header {
